turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:18: error: type mismatch;
 found   : java.awt.Color
 required: Int
    		(rule(state)(couleurActuelle(colors))(MVT_SUIVANT)) match{
                                            ^Turmite:32: error: type mismatch;
 found   : Int
 required: java.awt.Color
	return i
               ^Turmite:35: error: type mismatch;
 found   : java.awt.Color
 required: Int
		if(rule(state)(couleurActuelle(colors))(ETAT_SUIVANT)==0){
                                              ^Turmite:44: error: type mismatch;
 found   : java.awt.Color
 required: Int
		setCouleurBrosse(rule(state)(couleurActuelle(colors))(CLR_SUIVANT))
                                                            ^